# Primero-Ingenieria-Informatica

./: Ing_Informatica.code-workspace  README.md
1º_Curso/Informatica Basica/P04-first-programs/: first-programs.md
1º_Curso/Informatica Basica/ib-2022-2023-p07_iterations/: iterations.md
1º_Curso/Informatica Basica/ib-2022-2023-p08_functions/: README.md
1º_Curso/Informatica Basica/ib-2022-2023-p08_functions/fibonacci_sum/: CMakeLists.txt  CMakeLists.txt.simpler  LEE_ME.txt
1º_Curso/Informatica Basica/ib-2022-2023-p08_functions/fibonacci_sum/src/: fibonacci_main.cc
1º_Curso/Informatica Basica/ib-2022-2023-p11_intro-oop/: README.md  debug.cc
1º_Curso/Informatica Basica/ib-2022-2023-p12_oop/: README.md
1º_Curso/Informatica Basica/ib-2022-2023-p12_oop/p12-Automaton-class/: CMakeLists.txt  example.dfa
1º_Curso/Informatica Basica/ib-2022-2023-p12_oop/p12-Automaton-class/src/: Makefile  state.h
1º_Curso/Informatica Basica/p06-alternatives-and-iterations/: TopToButtom
Algoritmos y estructura de datos/Ayed Practicas/Practica 1/: rational_t.cpp  rational_t.hpp
Algoritmos y estructura de datos/Ayed Practicas/Practica 2/: data.txt  rational_t.cpp  rational_t.hpp
Algoritmos y estructura de datos/Ayed Practicas/Practica 3/: data.txt  data_polynomial.txt  data_polynomial2.out  data_polynomial2.txt  main_polynomial.cc  pair_t.h  polynomial.h
Algoritmos y estructura de datos/Ayed Practicas/Practica 4/: data_sllpolynomial.txt  main_sllpolynomial.cc  sll_node_t.h  sll_t.h  vector_t.h
Algoritmos y estructura de datos/Ayed Practicas/Practica 5/: data_rpn_t_1.txt  data_rpn_t_2.txt  data_rpn_t_3.txt  dll_t.h  queue_l_t.h  rpn_t.h  stack_l_t.h
Algoritmos y estructura de datos/Ayed Practicas/Practica 6/: data_maze_1.txt  data_maze_3.txt  matrix_t.hpp  maze_t.cpp  maze_t.hpp
Algoritmos y estructura de datos/Temario/: AyED - Problemas Tema 1-Nuevo.pptx
AyED/Ayed Practicas/Practica 2/: rational_t.cpp  vector_t.hpp
AyED/Ayed Practicas/Practica 3/: data.txt  pair_t.h
AyED/Ayed Practicas/Practica 4/: main_sllpolynomial.cc  pair_t.h  vector_t.h
AyED/Ayed Practicas/Practica 5/: dll_node_t.h  main_rpn_t.cc
AyED/Ayed Practicas/Practica 6/: matrix_t.hpp  maze_t.cpp
IB/JutgePrograms/IB-Alternativas/: P15613_Temperature.cc  P37469_TimeDescomposition.cc  P52847_Maximun_3_IntegerNumbers.cc  P90615_Maximum_3_DifferentIntegerNumbers.cc  P98960_UppercaseLowercaseLetters.cc
IB/JutgePrograms/IB-AlternativasInteraciones/: P29448_CorrectDates.cc  P31170_MultiplicationTable.cc  P34279_AddSecond.cc  P35547_EasterSundays.cc  P36668_SumSquares.cc  P37500_FirstNumbers.cc  P39057_ComputingAreas.cc  P43850_UncleMagician.cc  P51126_Intervals1.cc  P55622_NumberDigits.cc  P56118_Maximun_2_Numbers.cc  P59327_ReverseNumber.cc  P59539_HarmonicalNumber.cc  P59875_ToptoBottom.cc  P60816_ReversedNumberHexdecimal.cc  P62421_Treewords.cc  P67723_GreatestCommomDivisor.cc  P69277_FirstCubes.cc  P72986_PolinomialEvaluation_2.cc  P78142_Avarage.cc  P79784_MovementGround.cc  P81629_MinimunChange.cc  P89169_Interval_3.cc  P90226_ComparationWords.cc  P92613_Rounding.cc  P96767_PolinomialEvaluation_1.cc  P97969_CountingA.cc
IB/JutgePrograms/IB-Arrays/: P11725-SequentialSeachArray.cpp  P14130-EqualLastOne.cpp  P24301-ConcatenationVertors.cpp  P50497-IsPalimdrome_ (1).cpp  P63414-CountingFrequences.cpp  P67268-ReversingSequence.cpp  P71310-ScalarProduct.cpp  P87920-EqualToSumOfRest_2 (1).cpp  ReversingWorrds.cpp
IB/JutgePrograms/IB-Funciones1/: P34091_PerfectNumbers.cpp  P55722_InteractiveNumberDigits.cpp  P57846_Max2Numbers.cc  P57852_Greatest_common_divisor_of_four.cpp  P58459_ValidDates.cpp  P58653_ClassificationChatacters_2 (3).cpp  P73231_Max4Numbers.cc  P77686_PalimdromicNumbers.cpp  P88790_InterativeGCD (3).cpp  P95401_leap_years.cpp  P95972_SumDivisor.cpp  P96275_AbsoluteValue.cc  P96564_Least_Commun_Multiple (1).cpp
IB/JutgePrograms/IB-Funciones2/: P21281-MostFrecuentFactor.cpp  P59652-ReadRationalNumber_1.cpp  P65437-Swamp.cpp  (+4 more)
IB/ib-2022-2023-p06_alternatives_and_iterations/: alternatives-and-iterations.md
IB/ib-2022-2023-p09_strings-vectors/: string-array-vector.md
IB/ib-2022-2023-p10_files/: Criptografia.md  files.md
IB/ib-2022-2023-p11_intro-oop/: intro-oop.md
IB/ib-2022-2023-p12_oop/: LICENSE  oop.md
IB/practica03/: Quijote.txt
SED_Practicas/Entregable_1/: Entragable_1_tb.vhd
SED_Practicas/Entregable_2/: Entregable_2.vhd  ffD_reset.vhd  ffT_reset.vhd  sistema-Entregble_2.vhd
SED_Practicas/Practica_1/: Practica_1.vhd
SED_Practicas/Practica_3/: dec7seg.vhd  ffD_reset.vhd
SED_Practicas/Practica_4-(opcional)/: Asignacion-pines_minicronometro.ucf  contador.vhd  minicronometro.vhd
(+378 files in other folders)
